RESOLVED FIXED 259973
[GStreamer][WebRTC] Deadlocks web process at shutdown
https://bugs.webkit.org/show_bug.cgi?id=259973
Summary [GStreamer][WebRTC] Deadlocks web process at shutdown
Philippe Normand
Reported 2023-08-09 04:40:30 PDT
.
Attachments
Philippe Normand
Comment 1 2023-08-09 04:43:34 PDT
EWS
Comment 2 2023-08-10 06:26:56 PDT
Committed 266759@main (e3416ac9852c): <https://commits.webkit.org/266759@main> Reviewed commits have been landed. Closing PR #16518 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-08-10 06:27:14 PDT
Note You need to log in before you can comment on or make changes to this bug.