Cherry-pick 266759@main (e3416ac9852c). https://bugs.webkit.org/show_bug.cgi?id=259973

[GStreamer][WebRTC] Deadlocks web process at shutdown
    https://bugs.webkit.org/show_bug.cgi?id=259973

    Reviewed by Carlos Garcia Campos.

    When stopping outgoing media sources we were sending an EOS event to the mediastreamsrc, but not to
    the fallback source, so the downstream input-selector was blocked forever, waiting the EOS event
    from that source.

    * Source/WebCore/platform/mediastream/gstreamer/RealtimeOutgoingAudioSourceGStreamer.cpp:
    (WebCore::RealtimeOutgoingAudioSourceGStreamer::stopFallbackSource):
    * Source/WebCore/platform/mediastream/gstreamer/RealtimeOutgoingAudioSourceGStreamer.h:
    * Source/WebCore/platform/mediastream/gstreamer/RealtimeOutgoingMediaSourceGStreamer.cpp:
    (WebCore::RealtimeOutgoingMediaSourceGStreamer::stopOutgoingSource):
    * Source/WebCore/platform/mediastream/gstreamer/RealtimeOutgoingMediaSourceGStreamer.h:
    (WebCore::RealtimeOutgoingMediaSourceGStreamer::stopFallbackSource):
    * Source/WebCore/platform/mediastream/gstreamer/RealtimeOutgoingVideoSourceGStreamer.cpp:
    (WebCore::RealtimeOutgoingVideoSourceGStreamer::stopFallbackSource):
    * Source/WebCore/platform/mediastream/gstreamer/RealtimeOutgoingVideoSourceGStreamer.h:

    Canonical link: https://commits.webkit.org/266759@main